objects/Participant__x.object
<CustomObject>
    <fields>
        <fullName>FIRSTNAME__c</fullName>
        <description>FIRSTNAME</description>
        <externalDeveloperName>FIRSTNAME</externalDeveloperName>
        <label>First Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LASTNAME__c</fullName>
        <description>LASTNAME</description>
        <externalDeveloperName>LASTNAME</externalDeveloperName>
        <label>Last Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANAGERID__c</fullName>
        <description>Manager ID</description>
        <externalDeveloperName>MANAGERID</externalDeveloperName>
        <label>Manager ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MANAGERNAME__c</fullName>
        <description>MANAGERNAME</description>
        <externalDeveloperName>MANAGERNAME</externalDeveloperName>
        <label>Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYEEID__c</fullName>
        <description>PAYEEID</description>
        <externalDeveloperName>PAYEEID</externalDeveloperName>
        <label>Payee ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLANNAME__c</fullName>
        <description>PLANNAME</description>
        <externalDeveloperName>PLANNAME</externalDeveloperName>
        <label>Plan Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSITIONNAME__c</fullName>
        <description>POSITIONNAME</description>
        <externalDeveloperName>POSITIONNAME</externalDeveloperName>
        <label>Position Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLENAME__c</fullName>
        <description>TITLENAME</description>
        <externalDeveloperName>TITLENAME</externalDeveloperName>
        <label>Title Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>image_report2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callidus_URL</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>My Informations</relationshipLabel>
        <relationshipName>My_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>